--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,9 +1,30 @@
-Metrics/LineLength:
-  Max: 120
-
 Documentation:
   Enabled: false
 
+Metrics/AbcSize:
+  Max: 25
+
+Metrics/BlockLength:
+  ExcludedMethods:
+    - context
+    - define
+    - describe
+    - it
+    - let
+    - let!
+    - scenario
+    - shared_context
+    - shared_examples
+    - shared_examples_for
+
+Metrics/CyclomaticComplexity:
+  Max: 10
+
+Metrics/LineLength:
+  Max: 120
+
+Metrics/PerceivedComplexity:
+  Max: 10
+
 Style/GuardClause:
   Enabled: false
-
