Attempt to pull the job_id from the filename and link to the job

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -32,7 +32,7 @@ steps:
             artifact_path: spec/sample_artifacts/example.tap
             type: tap
           - label: ":eslint: eslint"
-            artifact_path: spec/sample_artifacts/eslint.txt
+            artifact_path: spec/sample_artifacts/eslint-*.txt
             type: oneline
             # ignore the last two lines
             crop:
@@ -61,7 +61,7 @@ steps:
             artifact_path: spec/sample_artifacts/example.tap
             type: tap
           - label: ":eslint: eslint"
-            artifact_path: spec/sample_artifacts/eslint.txt
+            artifact_path: spec/sample_artifacts/eslint-*.txt
             type: oneline
             # ignore the last two lines
             crop:
