--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -37,7 +37,7 @@ steps:
             artifact_path: spec/sample_artifacts/example.tap
             type: tap
           - label: ":eslint: eslint"
-            artifact_path: spec/sample_artifacts/eslint.txt
+            artifact_path: spec/sample_artifacts/eslint-*.txt
             type: oneline
             # ignore the last two lines
             crop:
@@ -66,7 +66,7 @@ steps:
             artifact_path: spec/sample_artifacts/example.tap
             type: tap
           - label: ":eslint: eslint"
-            artifact_path: spec/sample_artifacts/eslint.txt
+            artifact_path: spec/sample_artifacts/eslint-*.txt
             type: oneline
             # ignore the last two lines
             crop:
