Support <error> xunit elements

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -34,6 +34,9 @@ steps:
             type: junit
             encoding: UTF-8
             strip_colors: true
+          - label: ":speak_no_evil: xunit"
+            artifact_path: spec/sample_artifacts/xunit.xml
+            type: junit
           - label: ":camel: tap"
             artifact_path: spec/sample_artifacts/example.tap
             type: tap
@@ -63,6 +66,9 @@ steps:
             type: junit
             encoding: UTF-8
             strip_colors: true
+          - label: ":speak_no_evil: xunit"
+            artifact_path: spec/sample_artifacts/xunit.xml
+            type: junit
           - label: ":camel: tap"
             artifact_path: spec/sample_artifacts/example.tap
             type: tap
