--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -31,3 +31,6 @@ Metrics/PerceivedComplexity:
 
 Style/GuardClause:
   Enabled: false
+
+Layout/MultilineMethodCallIndentation:
+  EnforcedStyle: indented
