--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -85,7 +85,7 @@ steps:
             strip_colors: true
             summary:
               format: '%{location}: %{testcase.name}'
-              details_regex: '(?<location>\S+:\d+)'
+              details_regex: '(?<location>\S+:\d+)[^\n]*\z'
           - label: ":female-technologist: xunit"
             artifact_path: spec/sample_artifacts/xunit.xml
             type: junit
