--- a/plugin.yml
+++ b/plugin.yml
@@ -18,6 +18,7 @@ configuration:
             type: string
             enum:
               - junit
+              - checkstyle
               - tap
               - oneline
           encoding:
