junit: Allow disabling the message or details if they aren't relevant

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -86,6 +86,7 @@ steps:
               type: junit
               encoding: UTF-8
               strip_colors: true
+              message: false
               summary:
                 format: '%{location}: %{testcase.name}'
                 details_regex: '(?<location>\S+:\d+)[^\n]*\z'
