Add support for RSpec JSON input format (#10)
Co-authored-by: Kevin Green <kevin.green@instacart.com>

--- a/plugin.yml
+++ b/plugin.yml
@@ -21,6 +21,7 @@ configuration:
               - checkstyle
               - tap
               - oneline
+              - rspec_json
           encoding:
             type: string
           strip_colors:
